# bunny

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Rocket.toml  bookmarks.example.toml  books.toml  gitlab-ci.yml
src/: books.rs  command.rs  config.rs  encoder.rs  main.rs
src/books/: command.rs  config.rs  github.rs  google.rs  library.rs  mod.rs  twitter.rs
src/utils/: google.rs  mod.rs  twitter.rs
