[package]
name = "bunny"
version = "0.1.0"
authors = ["0x20F <alexhexan22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3"
toml = "0.5"
key-list = "1"
rocket = "0.4"
percent-encoding = "2"
serde = { version = "1.0", features = [ "derive" ] }
