[package]
name = "bunny"
version = "0.1.0"
authors = ["0x20F <alexhexan22@gmail.com>"]
edition = "2018"


homepage = "https://github.com/0x20F/bunny"
repository = "https://github.com/0x20F/bunny"
readme = "README.md"

keywords = ["bookmarks", "tool", "toml", "rocket"]

description = "Smart bookmarking tool, running custom commands to open urls from a browser url bar"

license = "GPL-3.0-or-later"



[dependencies]
dirs = "3"
toml = "0.5"
key-list = "1"
rocket = "0.4"
percent-encoding = "2"
serde = { version = "1.0", features = [ "derive" ] }
